# tg-tarot-app

./: .dockerignore  .gitignore  .vercelignore  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  Trunk.toml  build.rs  cards_data.json  index.html  vercel-build.sh  vercel-install.sh  vercel.json
scripts/: add_ua_names.py  resize_cards.py  resize_cards.sh
src/: app.rs  feedback.rs  i18n.rs  main.rs  reading.rs  telegram.rs
src/deck/: cards.rs  mod.rs  tests.rs
src/ui/: card_grid.rs  draw_controls.rs  mod.rs  status_banner.rs
static/: styles.css
translations/: cards_en.json  cards_ua.json  en.json  ua.json
