[package]
name = "tg-tarot-app"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = { version = "0.10", features = ["timers"] }
rand = { version = "0.8", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "Window"
] }
js-sys = "0.3"
