[package]
name = "tg-tarot-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = { version = "0.10", features = ["timers"] }
rand = { version = "0.8", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDocument",
    "HtmlTextAreaElement",
    "Navigator",
    "PointerEvent",
    "Window",
] }
js-sys = "0.3"
once_cell = "1.19"
telegram-webapp-sdk = { version = "0.3.0", features = ["yew"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
